--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+  <meta name="google-signin-client_id" content="1094958669148-pgmkknmi4coske9bj34pq0hudp0dhg67.apps.googleusercontent.com">
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
